[package]
name = "ray_tracer"
version = "0.1.0"
authors = ["Vanille-N <neven.villani@gmail.com>"]
edition = "2018"

[lib]
name = "trace"
crate-type = ["cdylib"]

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
rand = "0.7"
threadpool = "1.8.*"

[dependencies.pyo3]
version = "0.10.1"
features = ["extension-module"]

#[profile.release]
#debug = true
