[package]
name = "pytrace_core"
version = "0.2.2"
authors = ["Vanille-N <neven.villani@gmail.com>"]
edition = "2018"
include = ["src/**/*", "README.md"]
license = "GPL-3.0"
description = "Internal library for the Python module pytrace"
readme = "crate-info.md"
repository = "https://github.com/Vanille-N/ray_tracer"
keywords = ["ray-tracing", "graphics"]
documentation = "https://docs.rs/pytrace_core"

[dependencies]
rand = "0.7"
threadpool = "1.8.*"
