[package]
name = "pytrace"
version = "0.2.1"
authors = ["Vanille-N <neven.villani@gmail.com>"]
edition = "2018"
include = ["src/**/*", "README.md"]
license = "GPL-3.0"
description = "A Python library for ray tracing and image generation"
readme = "README.md"
repository = "https://github.com/Vanille-N/ray_tracer"
keywords = ["ray-tracing", "graphics", "python-library"]

[lib]
name = "pytrace"
crate-type = ["cdylib"]

[dependencies]
pytrace_core = "0.2.4"
glob = "0.3.*"

[dependencies.pyo3]
version = "0.10.1"
features = ["extension-module"]
