[package]
name = "pytrace"
version = "0.3.3"
authors = ["Vanille-N <neven.villani@gmail.com>"]
edition = "2018"
include = ["src/**/*", "README.md"]
license = "MIT"
description = "A Python library for ray tracing and image generation"
readme = "crate-info.md"
repository = "https://github.com/Vanille-N/ray_tracer"
keywords = ["ray-tracing", "graphics", "python-library"]

[lib]
name = "pytrace"
crate-type = ["cdylib"]

[dependencies]
pytrace_core = "0.2.5"
glob = "0.3.*"
ctrlc = "3.1.*"

[dependencies.pyo3]
version = "0.11.*"
features = ["extension-module"]
